--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </a>
 
         <a
-          href="https://www.facebook.com/messages/t/100036232560312"
+          href="https://www.messenger.com/t/100036232560312"
           target="-blank"
         >
           LIÊN HỆ
