--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./fontawesome-free-6.1.2-web/css/all.css" />
     <link rel="stylesheet" media="(max-width: 740px)" href="mobile.css" />
-    <title>Document</title>
+    <title>LÊ THỊ THU (THU ÓC CHOS)</title>
   </head>
   <body>
     <div class="container">
